--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <img src="images/f6.jpg" alt="">
         <div class="info">
             <h3>trainer</h3>
-            <p> We have well experienced and all certified trainers who will help you to get your perfect body shape according to your requirements and diet plans.</p>
+            <p> We have well experienced and all certified trainers who will help you to get your perfect body shape according to your requirement and diet plans.</p>
             <a href="#"><button class="btn">more</button></a>
         </div>
     </div>
