--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="box">
         <img src="images/f5.jfif" alt="">
         <div class="info">
-            <h3>equipments</h3>
+            <h3>Equipments</h3>
             <p> All new equipments like dumbells, plates, rods, bands machines, treadmills and many other equipments.Perfect equipments to make your body perfect.</p>
             <a href="#"><button class="btn">more</button></a>
         </div>
